[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game/snake/head/head.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/game/snake/snake.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/correct.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/gameOver.wav" type="AudioStream" id=4]

[node name="Snake" type="Node"]
script = ExtResource( 2 )

[node name="TailContainer" type="Node" parent="."]

[node name="SnakeHead" parent="." instance=ExtResource( 1 )]
position = Vector2( 388.391, 258.927 )

[node name="MoveTimer" type="Timer" parent="."]

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="InitialPosition" type="Position2D" parent="."]
position = Vector2( 390.833, 260.269 )
[connection signal="timeout" from="MoveTimer" to="SnakeHead" method="onMoveTimer_timeout"]
